# STPoints

./: .gitignore  README.md  index.html  pyproject.toml
calib/: cloud.py
calibpy/: backup_config.py  calib.py  camera.py  coord_fix.py  coordinate.py  draw.py  extrinsic.py  fast_config.py  intrinsic.py  lidar.py  list_backups.py  muti_eval.py  test_coordinate.py
calibpy/utils/: bound_trans.py  calculate.py  draw_box.py  rotation.py
config/: calibrated_config.json  config.json  hyper.yaml
doc/: calibration_logic_summary.md
mapping/: pnp.py
public/js/: calib.js  image.js  obj_cfg.js  world.js
tools/: diagnose_projection.py  proj_cv.txt  proj_frontend.txt
