[project]
name = "stpoints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cherrypy>=18.10.0",
    "dash>=3.3.0",
    "numpy>=1.24.4",
    "open3d>=0.19.0",
    "opencv-python>=4.12.0.88",
    "protobuf>=5.29.5",
    "pyjson>=1.4.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.3.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
]
